--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "@tailwindcss/postcss": "^4.1.18",
+    "lucide-angular": "^0.562.0",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.26.10",
